external-crates/move/crates/move-compiler/tests/move_2024/parser/ability_modifies_infix_no_abilities_postfix.move
address 0x42 {
module M {
    // invalid ability declaration
    struct Foo has copy {} has;
}
}
